# shi_guang

./: .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  README.md  REVIEW.md  components.json  drizzle.config.ts  electron.vite.config.ts  index.html  knip.json  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  tmp-tauri-dev-config.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: release_template.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
assets/: icon.icns
doc/: drag-drop-card.md
docs/: CHANGELOG.md  electron-migration-plan.md  memory-analysis.md  thumbnail-generation-strategy.md  ui-design-style.md
drizzle/: 0000_orange_giant_girl.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
electron/: application-menu.ts  clip-image-preprocess.ts  clip-manifest.ts  clip-runtime.ts  clipboard-file-references.ts  clipboard.ts  commands.ts  database.ts  file-operations.ts  file-protocol.ts  library-sync-logic.ts  logger.ts  main.ts  media.ts  path-utils.ts  preload.ts  startup-library.ts  storage.ts  thumbnail.ts  trash-paths.ts  types.ts  updater.ts  visual-index-utility-service.ts  visual-index-utility.ts  visual-search.ts  window-manager.ts
electron/__tests__/: app-environment.test.ts  auto-ai-metadata-scheduler.test.ts  database-migration.test.ts  file-protocol.test.ts  file-search.test.ts  folder-repository.test.ts  import-core.test.ts  library-sync-logic.test.ts  media.test.ts  similarity-repository.test.ts  startup-library.test.ts  thumbnail.test.ts  trash-repository.test.ts  visual-search-config.test.ts
electron/app/: app-icon.ts  environment.ts  file-protocol.ts  startup-library.ts  window-manager.ts
electron/commands/: ai-metadata-service.ts  auto-ai-metadata-scheduler.ts  collector-server.ts  common.ts  file-commands.ts  folder-commands.ts  import-core.ts  import-service.ts  indexing-commands.ts  library-sync-service.ts  post-import-pipeline.ts  registry.ts  system-commands.ts  tag-commands.ts  trash-commands.ts  trash-file-service.ts  visual-ai-commands.ts  visual-ai-service.ts
electron/database/: client.ts  file-repository.ts  folder-repository.ts  schema.ts  settings-repository.ts  shared.ts  similarity-repository.ts  tag-repository.ts  trash-repository.ts  visual-repository.ts
electron/visual-search/: bert-wordpiece.ts  clip-encoders.ts  clip-runtime-data.ts  clip-runtime-model.ts  clip-runtime.ts  config.ts  index.ts  model-download.ts  visual-index-utility-service.ts  visual-index-utility.ts
extensions/shiguang-collector/: background.js  content-drag-dock.js  content-panel-style.js  content-panel-utils.js  content-panel.js  content-shared.js  content-xiaohongshu.js  content.js  manifest.json  popup.css  popup.js  (+1 more)
scripts/: after-pack-prune.cjs  changelog.cjs  claude-review.sh  prepare-release.cjs  release.cjs  report-package-size.cjs  set-version.cjs  update-version.cjs  verify-package-native-deps.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns  svg2png.html
src-tauri/src/: commands.rs  db.rs  http_server.rs  indexer.rs  lib.rs  linux_glibc_compat.rs  logging.rs  main.rs  media.rs  memory_diagnostics.rs  openai.rs  path_utils.rs  storage.rs
src-tauri/src/commands/: ai.rs  files.rs  folders.rs  imports.rs  indexing.rs  post_import.rs  system.rs  tags.rs  trash.rs
src-tauri/src/commands/ai/: metadata.rs  mod.rs  shared.rs  visual_index.rs
src-tauri/src/db/: files.rs  folders.rs  schema.rs  semantic.rs  settings.rs  tags.rs  visual_search.rs
src-tauri/src/db/files/: helpers.rs  read.rs  write.rs
src-tauri/src/db/migrations/: mod.rs  v1.rs  v10.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
src-tauri/src/db/query/: files_filter.rs  mod.rs
src-tauri/src/ml/: chinese_clip.rs  fgclip2.rs  image_preprocess.rs  mod.rs  model_manager.rs  tokenizer.rs
website/: rspress.config.ts
(+180 files in other folders)
