[package]
name = "shiguang"
version = "0.1.0"
description = "A material management tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "shiguang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
image = "0.25"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2"
dirs = "6.0.0"
tauri-plugin-fs = "2"
tauri-plugin-mcp-bridge = "0.9"
axum = "0.6"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
bytes = "1"
http = "0.2"
arboard = "3"
drag = "2.1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
