[package]
name = "shiguang"
version = "0.1.0"
description = "A material management tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "shiguang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
memory-diagnostics = ["dep:sysinfo", "dep:tracing", "dep:tracing-subscriber"]
memory-heap = ["memory-diagnostics", "dep:dhat"]

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2"
image = "0.25"
chrono = "0.4"
log = "0.4"
base64 = "0.22"
tauri-plugin-devtools = "2.1.0"
tauri-plugin-dialog = "2.7"
dirs = "6.0.0"
tauri-plugin-fs = "2.5"
tauri-plugin-mcp-bridge = "0.11"
axum = "0.8"
reqwest = { version = "0.13", features = ["rustls", "stream"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-service = "0.3"
bytes = "1"
http = "1.4"
arboard = "3"
drag = "2.1.0"
rayon = "1.11"
sha2 = "0.10"
tauri-plugin-log = "2"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "std"], optional = true }
dhat = { version = "0.3.3", optional = true }
omni_search = "0.1.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
